wp_derive_request_builder/tests/fail/url_value_not_literal.stderr
error: Url should be set as a String: (url = "/foo")
 --> tests/fail/url_value_not_literal.rs:5:28
  |
5 |     #[contextual_get(url = users, params = &UserListParams, output = Vec<SparseUser>)]
  |                            ^^^^^
